--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 </head>
 <body>
 <section class="container">
-  <img src="images/image-header-mobile.jpg" alt="image-header-mobile">
+  <div class="image-bg">
+    <img src="images/image-header-mobile.jpg" alt="image-header-mobile">
+  </div>
   <div class="down-section">
     <h1>
       Get <span style="color: hsl(277, 64%, 61%);">insights</span> that help your business grow.
@@ -31,11 +33,11 @@
       experience, and overall efficiency.</p>
   
     <h2>10k+</h2>
-    <p id="stats-desc"> companies</p>
+    <p id="stats-desc">COMPANIES</p>
     <h2>314</h2>
-    <p id="stats-desc">templates</p>
+    <p id="stats-desc">TEMPLATES</p>
     <h2>12M+</h2>
-    <p id="stats-desc">queries</p>
+    <p id="stats-desc">QUERIES</p>
   </div>
 
  </section>
